# datadog-agent

./: .bazelrc  .gitignore  .gitlab-ci.yml  LICENSE-3rdparty.csv  MODULE.bazel  go.mod  go.sum  go.work  mkdocs.yml  modules.yml  release.json
.circleci/: config.yml
.github/: CODEOWNERS
.github/workflows/: assess_permissions.yml  assign_issue.yml  chase_for_qa_cards.yml  chase_release_managers.yml  create_rc_pr.yml  create_release_schedule.yml  serverless-integration.yml  update_dependencies.yml
.gitlab/: .ci-linters.yml
.gitlab/.pre/: ci_configuration.yml  clone.yml
.gitlab/binary_build/: cluster_agent.yml
.gitlab/common/: macos.yml  test_infra_version.yml
.gitlab/container_build/: docker_linux.yml  docker_windows.yml  docker_windows_agent7.yml
.gitlab/deploy_containers/: deploy_containers_a7.yml
.gitlab/deploy_cws_instrumentation/: deploy_cws_instrumentation.yml
.gitlab/deploy_dca/: deploy_dca.yml
.gitlab/deploy_packages/: windows.yml  winget.yml
.gitlab/deps_build/: deps_build.yml
.gitlab/dev_container_deploy/: docker_linux.yml  docker_windows.yml  e2e.yml
.gitlab/e2e/: e2e.yml
.gitlab/functional_test/: oracle.yml  regression_detector.yml
.gitlab/integration_test/: otel.yml
.gitlab/internal_image_deploy/: internal_image_deploy.yml
.gitlab/internal_kubernetes_deploy/: internal_kubernetes_deploy.yml
.gitlab/kernel_matrix_testing/: system_probe.yml
.gitlab/lint/: linux.yml  macos.yml
.gitlab/notify/: notify.yml
.gitlab/package_build/: dmg.yml  heroku.yml  installer.yml  linux.yml  windows.yml
.gitlab/packaging/: deb.yml  rpm.yml
.gitlab/pkg_metrics/: pkg_metrics.yml
.gitlab/release_jobs/: gate.yml  include.yml  stages.yml  trigger_release_jobs.yml
.gitlab/source_test/: codeql_scan.yml  ebpf.yml  linux.yml  windows.yml
.gitlab/trigger_release/: agent.yml  trigger_release.yml
.run/: Debug agent.run.xml  Debug process-agent.run.xml  Debug system-probe.run.xml  configuration.sh
.run/docker/: Run development container for AMD64.run.xml  Run linter.run.xml
Dockerfiles/agent/: Dockerfile
bazel/: linux_kernel_repo.bzl
bazel/.devcontainer/: Dockerfile
bazel/lib/: security-agent.bzl
bazel/private/: utils.bzl
bazel/rules/: cgodefs.bzl  ebpf.bzl
cmd/secrethelper/: secret_helper.go
cmd/security-agent/: BUILD.bazel
cmd/trace-agent/: main.go
comp/: README.md
comp/def/: go.mod
comp/metadata/: bundle.go
docs/cloud-workload-security/: linux_expressions.md  secl_linux.json  secl_windows.json  windows_expressions.md
docs/dev/: agent_omnibus.md
docs/public/: devflow.md
internal/tools/: go.mod  go.sum
omnibus/lib/: project_extension.rb
pkg/aggregator/: aggregator.go  aggregator_test.go  demultiplexer_serverless.go  time_sampler.go
pkg/api/: go.mod
pkg/collector/: scheduler.go  stats.go  stats_test.go
pkg/collector/corechecks/ebpf/probe/ebpfcheck/: BUILD.bazel
pkg/collector/corechecks/ebpf/probe/oomkill/: BUILD.bazel  c_types_linux.go
pkg/collector/corechecks/ebpf/probe/tcpqueuelength/: BUILD.bazel
pkg/commonchecks/: corechecks.go
pkg/config/: config_template.yaml
pkg/diagnose/: check.go
pkg/ebpf/: BUILD.bazel  map_cleaner.go  perf.go  perf_data_event.go  perf_ring_buffer.go  types_linux.go
pkg/ebpf/c/: BUILD.bazel  bpf_bypass.h  bpf_telemetry.h
pkg/ebpf/testdata/c/: BUILD.bazel
pkg/errors/: go.mod
pkg/fips/: go.mod
pkg/flare/: archive.go  archive_test.go
pkg/gohai/: go.mod  go.sum
pkg/gpu/ebpf/: BUILD.bazel  kprobe_types_linux.go
pkg/gpu/ebpf/c/: BUILD.bazel  types.h
pkg/gpu/ebpf/c/runtime/: BUILD.bazel
pkg/metrics/: go.mod  go.sum  metric_sample.go  metricsource.go
pkg/network/ebpf/: BUILD.bazel  kprobe_types.go  kprobe_types_linux.go  kprobe_types_linux_test.go
pkg/network/ebpf/c/: BUILD.bazel  tracer.c
pkg/network/ebpf/c/co-re/: BUILD.bazel
pkg/network/ebpf/c/prebuilt/: BUILD.bazel  usm.c  usm_events_test.c
pkg/network/ebpf/c/protocols/: events-types.h  events.h  flush-types.h  flush.h
pkg/network/ebpf/c/protocols/classification/: defs.h  protocol-classification.h  shared-tracer-maps.h
pkg/network/ebpf/c/protocols/example/: example.h  types.h
pkg/network/ebpf/c/protocols/http/: http.h  types.h
pkg/network/ebpf/c/protocols/http2/: decoding-defs.h  decoding.h
pkg/network/ebpf/c/protocols/kafka/: kafka-parsing.h  types.h
pkg/network/ebpf/c/protocols/tls/: https.h  native-tls.h
pkg/network/ebpf/c/runtime/: BUILD.bazel  usm.c
pkg/network/ebpf/c/shared-libraries/: probes.h  types.h
pkg/network/ebpf/c/tracer/: events.h  maps.h  stats.h  tcp_recv.h  tracer.h
pkg/network/ebpf/probes/: probes.go
pkg/network/protocols/: BUILD.bazel  ebpf_types.go  ebpf_types_linux.go  ebpf_types_linux_test.go  protocols.go
pkg/network/protocols/events/: BUILD.bazel  batch_offsets.go  batch_offsets_test.go  configuration.go  consumer.go  consumer_test.go  test_helpers.go  types_linux.go
pkg/network/protocols/http/: BUILD.bazel  incomplete_stats.go  model.go  model_linux.go  protocol.go  statkeeper.go  stats.go  telemetry.go  types_linux.go
pkg/network/protocols/http/gotls/: BUILD.bazel  go_tls_types_linux.go
pkg/network/protocols/http2/: BUILD.bazel  model_linux.go  protocol.go  types_linux.go
pkg/network/protocols/kafka/: BUILD.bazel  protocol.go  types_linux.go
pkg/network/protocols/postgres/: protocol.go
pkg/network/protocols/postgres/ebpf/: BUILD.bazel  types_linux.go
pkg/network/protocols/redis/: BUILD.bazel  protocol.go  types_linux.go
pkg/network/tracer/offsetguess/: BUILD.bazel  offsetguess_types_linux.go
pkg/obfuscate/: cache.go  go.mod  go.sum  obfuscate.go  redis.go  sql.go
pkg/security/ebpf/c/include/: BUILD.bazel
pkg/security/ebpf/c/include/hooks/: exec.h  filename.h  link.h  mkdir.h
pkg/security/ebpf/c/prebuilt/: BUILD.bazel
tasks/: __init__.py  agent.py  build_tags.py  cluster_agent.py  ebpf.py  git.py  github_tasks.py  go.py  gotest.py  install_tasks.py  installer.py  kmt.py  msi.py  new_e2e_tests.py  omnibus.py  pipeline.py  process_agent.py  release.py  security_agent.py  system_probe.py  trace_agent.py  winbuild.py
(+848 files in other folders)
