load("//:bazel/rules/ebpf.bzl", "ebpf_prog")

cc_library(
    name = "ebpf_c_headers",
    hdrs = [
        "asm_goto_workaround.h",
        "bpf_builtins.h",
        "bpf_bypass.h",
        "bpf_core_read.h",
        "bpf_cross_compile.h",
        "bpf_endian.h",
        "bpf_helper_defs.h",
        "bpf_helpers.h",
        "bpf_helpers_custom.h",
        "bpf_metadata.h",
        "bpf_telemetry.h",
        "bpf_tracing.h",
        "bpf_tracing_custom.h",
        "cgroup.h",
        "compiler.h",
        "kconfig.h",
        "ktypes.h",
        "lock_contention.h",
        "map-defs.h",
        "telemetry_types.h",
        "vmlinux.h",
        "vmlinux_5_15_0.h",
        "vmlinux_5_15_0_arm.h",
    ],
    visibility = ["//visibility:public"],
)

ebpf_prog(
    name = "lock_contention",
    src = "lock_contention.c",
    core = True,
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
    ],
)

ebpf_prog(
    name = "ksyms_iter",
    src = "ksyms_iter.c",
    core = True,
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
    ],
)
