load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:bazel/rules/cgodefs.bzl", "cgo_godefs")

cgo_godefs(
    name = "kprobe_types",
    src = "kprobe_types.go",
    headers = [
        "c/types.h",
    ],
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
    ],
)

go_library(
    name = "ebpf",
    srcs = [
        "kprobe_types_linux.go",
        "kprobe_types_string_linux.go",
    ],
    cgo = True,
    importpath = "github.com/DataDog/datadog-agent/pkg/gpu/ebpf",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ebpf_test",
    srcs = ["kprobe_types_linux_test.go"],
    embed = [":ebpf"],
    deps = select({
        "@rules_go//go/platform:android": [
            "//pkg/ebpf/ebpftest",
        ],
        "@rules_go//go/platform:linux": [
            "//pkg/ebpf/ebpftest",
        ],
        "//conditions:default": [],
    }),
)
