load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:bazel/rules/cgodefs.bzl", "cgo_godefs")

cgo_godefs(
    name = "conntrack_types",
    src = "conntrack_types.go",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

cgo_godefs(
    name = "tuple_types",
    src = "tuple_types.go",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

cgo_godefs(
    name = "kprobe_types",
    src = "kprobe_types.go",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

go_library(
    name = "ebpf",
    srcs = [
        "conntrack.go",
        "conntrack_types_linux.go",
        "kprobe.go",
        "kprobe_types_linux.go",
        "tuple.go",
        "tuple_types_linux.go",
    ],
    cgo = True,
    importpath = "github.com/DataDog/datadog-agent/pkg/network/ebpf",
    visibility = ["//visibility:public"],
    deps = select({
        "@rules_go//go/platform:android": [
            "//pkg/process/util",
        ],
        "@rules_go//go/platform:linux": [
            "//pkg/process/util",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "ebpf_test",
    srcs = [
        "conntrack_types_linux_test.go",
        "kprobe_types_linux_test.go",
        "tuple_types_linux_test.go",
    ],
    embed = [":ebpf"],
    deps = select({
        "@rules_go//go/platform:android": [
            "//pkg/ebpf/ebpftest",
        ],
        "@rules_go//go/platform:linux": [
            "//pkg/ebpf/ebpftest",
        ],
        "//conditions:default": [],
    }),
)
