load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:bazel/rules/cgodefs.bzl", "cgo_godefs")

cgo_godefs(
    name = "ebpf_types",
    src = "ebpf_types.go",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

go_library(
    name = "protocols",
    srcs = [
        "common.go",
        "common_linux.go",
        "ebpf.go",
        "ebpf_types_linux.go",
        "sketchespool.go",
        "types.go",
    ],
    cgo = True,
    importpath = "github.com/DataDog/datadog-agent/pkg/network/protocols",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/util/sync",
        "@com_github_datadog_sketches_go//ddsketch",
    ] + select({
        "@rules_go//go/platform:android": [
            "//pkg/util/log",
            "@com_github_cilium_ebpf//:ebpf",
            "@com_github_datadog_ebpf_manager//:ebpf-manager",
        ],
        "@rules_go//go/platform:linux": [
            "//pkg/util/log",
            "@com_github_cilium_ebpf//:ebpf",
            "@com_github_datadog_ebpf_manager//:ebpf-manager",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "protocols_test",
    srcs = ["common_test.go"],
    embed = [":protocols"],
    deps = ["@com_github_stretchr_testify//require"],
)
