load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:bazel/rules/cgodefs.bzl", "cgo_godefs")

cgo_godefs(
    name = "offsetguess_types",
    src = "offsetguess_types.go",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

go_library(
    name = "offsetguess",
    srcs = ["offsetguess_types_linux.go"],
    cgo = True,
    importpath = "github.com/DataDog/datadog-agent/pkg/network/tracer/offsetguess",
    visibility = ["//visibility:public"],
)

go_test(
    name = "offsetguess_test",
    srcs = ["offsetguess_types_linux_test.go"],
    embed = [":offsetguess"],
    deps = select({
        "@rules_go//go/platform:android": [
            "//pkg/ebpf/ebpftest",
        ],
        "@rules_go//go/platform:linux": [
            "//pkg/ebpf/ebpftest",
        ],
        "//conditions:default": [],
    }),
)
