load("//:bazel/rules/ebpf.bzl", "ebpf_prog")

ebpf_prog(
    name = "dns",
    srcs = ["dns.c"],
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)
ebpf_prog(
    name = "offset-guess",
    srcs = ["offset-guess.c"],
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)
ebpf_prog(
    name = "usm",
    srcs = ["usm.c"],
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)
ebpf_prog(
    name = "usm_events_test",
    srcs = ["usm_events_test.c"],
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)
ebpf_prog(
    name = "shared-libraries",
    srcs = ["shared-libraries.c"],
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)
ebpf_prog(
    name = "conntrack",
    srcs = ["conntrack.c"],
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

exports_files([
    "conntrack.h",
    "offsets.h",
    "offset-guess.h",
])

