load("//:bazel/rules/ebpf.bzl", "ebpf_prog")

ebpf_prog(
    name = "dns",
    src = "dns.c",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

ebpf_prog(
    name = "offset-guess",
    src = "offset-guess.c",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

ebpf_prog(
    name = "usm",
    src = "usm.c",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

ebpf_prog(
    name = "usm_events_test",
    src = "usm_events_test.c",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

ebpf_prog(
    name = "shared-libraries",
    src = "shared-libraries.c",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

ebpf_prog(
    name = "conntrack",
    src = "conntrack.c",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

exports_files([
    "conntrack.h",
    "offsets.h",
    "offset-guess.h",
])
