load("//:bazel/rules/ebpf.bzl", "ebpf_prog")

ebpf_prog(
    name = "usm",
    srcs = ["usm.c"],
    core = True,
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

ebpf_prog(
    name = "shared-libraries",
    srcs = ["shared-libraries.c"],
    core = True,
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

ebpf_prog(
    name = "conntrack",
    srcs = ["conntrack.c"],
    core = True,
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

exports_files([
    "conntrack.h",
    "conntrack-types.h",
])
