load("//:bazel/rules/ebpf.bzl", "ebpf_prog")

ebpf_prog(
    name = "usm",
    src = "usm.c",
    core = True,
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

ebpf_prog(
    name = "shared-libraries",
    src = "shared-libraries.c",
    core = True,
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

ebpf_prog(
    name = "conntrack",
    src = "conntrack.c",
    core = True,
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

exports_files([
    "conntrack.h",
    "conntrack-types.h",
])
