load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:bazel/rules/cgodefs.bzl", "cgo_godefs")

cgo_godefs(
    name = "types",
    src = "types.go",
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/network/ebpf/c:ebpf_c_network",
    ],
)

go_library(
    name = "ebpf",
    srcs = ["types_linux.go"],
    cgo = True,
    importpath = "github.com/DataDog/datadog-agent/pkg/network/protocols/postgres/ebpf",
    visibility = ["//visibility:public"],
)

go_test(
    name = "ebpf_test",
    srcs = ["types_linux_test.go"],
    embed = [":ebpf"],
    deps = select({
        "@rules_go//go/platform:android": [
            "//pkg/ebpf/ebpftest",
        ],
        "@rules_go//go/platform:linux": [
            "//pkg/ebpf/ebpftest",
        ],
        "//conditions:default": [],
    }),
)
