cc_library(
    name = "security_ebpf_headers",
    hdrs = [
        "constants/all.h",
        "constants/custom.h",
        "constants/enums.h",
        "constants/fentry_macro.h",
        "constants/macros.h",
        "constants/offsets/all.h",
        "constants/offsets/bpf.h",
        "constants/offsets/filesystem.h",
        "constants/offsets/netns.h",
        "constants/offsets/network.h",
        "constants/offsets/process.h",
        "constants/offsets/splice.h",
        "constants/syscall_macro.h",
        "events_definition.h",
        "helpers/activity_dump.h",
        "helpers/all.h",
        "helpers/approvers.h",
        "helpers/bpf.h",
        "helpers/buffer_selector.h",
        "helpers/container.h",
        "helpers/dentry_resolver.h",
        "helpers/discarders.h",
        "helpers/erpc.h",
        "helpers/events.h",
        "helpers/events_predicates.h",
        "helpers/exec.h",
        "helpers/filesystem.h",
        "helpers/iouring.h",
        "helpers/network/context.h",
        "helpers/network/dns.h",
        "helpers/network/flow.h",
        "helpers/network/imds.h",
        "helpers/network/parser.h",
        "helpers/network/pid_resolver.h",
        "helpers/network/raw.h",
        "helpers/network/router.h",
        "helpers/network/stats.h",
        "helpers/network/utils.h",
        "helpers/process.h",
        "helpers/rate_limiter.h",
        "helpers/raw_syscalls.h",
        "helpers/selinux.h",
        "helpers/span.h",
        "helpers/syscalls.h",
        "helpers/sysctl.h",
        "helpers/user_sessions.h",
        "helpers/utils.h",
        "hooks/all.h",
        "hooks/bpf.h",
        "hooks/cgroup.h",
        "hooks/chdir.h",
        "hooks/chmod.h",
        "hooks/chown.h",
        "hooks/commit_creds.h",
        "hooks/dentry_resolver.h",
        "hooks/exec.h",
        "hooks/filename.h",
        "hooks/ioctl.h",
        "hooks/iouring.h",
        "hooks/link.h",
        "hooks/login_uid.h",
        "hooks/mkdir.h",
        "hooks/mmap.h",
        "hooks/module.h",
        "hooks/mount.h",
        "hooks/mprotect.h",
        "hooks/namespaces.h",
        "hooks/network/accept.h",
        "hooks/network/bind.h",
        "hooks/network/connect.h",
        "hooks/network/dns.h",
        "hooks/network/flow.h",
        "hooks/network/imds.h",
        "hooks/network/net_device.h",
        "hooks/network/raw.h",
        "hooks/network/stats_worker.h",
        "hooks/network/tc.h",
        "hooks/offset_guesser.h",
        "hooks/on_demand.h",
        "hooks/open.h",
        "hooks/procfs.h",
        "hooks/ptrace.h",
        "hooks/raw_syscalls.h",
        "hooks/rename.h",
        "hooks/rmdir.h",
        "hooks/selinux.h",
        "hooks/setattr.h",
        "hooks/setxattr.h",
        "hooks/signal.h",
        "hooks/splice.h",
        "hooks/sysctl.h",
        "hooks/umount.h",
        "hooks/unlink.h",
        "hooks/utimes.h",
        "maps.h",
        "perf_ring.h",
        "structs/activity_dump.h",
        "structs/all.h",
        "structs/bpf.h",
        "structs/dentry_resolver.h",
        "structs/dns.h",
        "structs/erpc.h",
        "structs/events_context.h",
        "structs/filesystem.h",
        "structs/filter.h",
        "structs/network.h",
        "structs/open.h",
        "structs/process.h",
        "structs/rate_limiter.h",
        "structs/security_profile.h",
        "structs/selinux.h",
        "structs/syscalls.h",
        "structs/tracepoints.h",
        "structs/user_sessions.h",
        "tests/activity_dump_ratelimiter_test.h",
        "tests/baloum.h",
        "tests/discarders_test.h",
        "tests/raw_packet_test.h",
        "tests/tests.h",
    ],
    visibility = ["//visibility:public"],
)
