load("//:bazel/rules/ebpf.bzl", "ebpf_prog")

ebpf_prog(
    name = "probe",
    src = "probe.c",
    extra_flags = ["-DUSE_SYSCALL_WRAPPER=0"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
        "//pkg/security/ebpf/c/include:security_ebpf_headers",
    ],
)
