load("@rules_go//go:def.bzl", "go_library", "go_test")
load("//:bazel/rules/cgodefs.bzl", "cgo_godefs")

cgo_godefs(
    name = "c_types",
    src = "c_types.go",
    headers = ["//pkg/collector/corechecks/ebpf:c/runtime/oom-kill-kern-user.h"],
    target_platform = select({
        "@platforms//os:linux": "linux",
        "@platforms//os:windows": "windows",
    }),
    deps = [
        "//pkg/ebpf/c:ebpf_c_headers",
    ],
)

go_library(
    name = "oomkill",
    srcs = [
        "c_types_linux.go",
        "oom_kill_stub.go",
    ],
    cgo = True,
    importpath = "github.com/DataDog/datadog-agent/pkg/collector/corechecks/ebpf/probe/oomkill",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/collector/corechecks/ebpf/probe/oomkill/model",
        "//pkg/ebpf",
    ],
)

go_test(
    name = "oomkill_test",
    srcs = ["c_types_linux_test.go"],
    embed = [":oomkill"],
    deps = select({
        "@rules_go//go/platform:android": [
            "//pkg/ebpf/ebpftest",
        ],
        "@rules_go//go/platform:linux": [
            "//pkg/ebpf/ebpftest",
        ],
        "//conditions:default": [],
    }),
)
